--- a/Frontend Projects/1. Single Page CV/code.html
+++ b/Frontend Projects/1. Single Page CV/code.html
@@ -1,1 +1,113 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Curriculum-Vitae</title>
+    <script src="https://kit.fontawesome.com/e55ca06509.js" crossorigin="anonymous"></script>
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <meta charset="UTF-8">
+    <meta name="description" content="Rakshith Raghav Joshi - CV/Resume; MDes IIIT JBP - Interaction and Service Design">
+    <meta name="keywords" content="Rakshith, Raghav, Joshi, IIIT, MDes, Interaction Design, IxD, Service Design, UI/UX, UI, UX, Research">
+    <meta name="author" content="Raghav Joshi">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        div.ex2 {
+            max-width: 750px;
+            margin: auto;
+            border: 50px solid #123456;
+        }
+    </style>
+</head>
+<body>
+<div class="ex2">
+     <table border="3" border-style="dash" cellpadding="36" cellspacing="0" >
+        <tr>
+            <td>
+    <p style="font-size:28px; font-family:Verdana;">Rakshith Raghav Joshi
+    </p>
+        <b style="color:lightseagreen; font-family:Calibri;">Interaction Designer, UX Researcher</b>
+    </p>
+    <p style="font-family:Calibri">
+       IIIT Jabalpur<br>
+       +91-72593xxxx9<br>
+       raghavxxxx10@gmail.com
+    </p>
+    <hr>
+    <p style="color:lightseagreen; font-family:Calibri;">
+        <b>Skills</b>
+        <p style="font-family:Calibri;">Figma to Design, UXR, HTML, CSS, JS, UX Writing, Adobe Suite, Miro, Notion</p>
+    </p>
+    <hr>
+    <p style="color:lightseagreen; font-family:Calibri;">
+        <b>Education</b>
+    </p>
+    <p style="font-size:24px; color:rgb(40, 40, 40); font-family:Calibri;">
+        <b>Indian Insititute of Information Technology 
+            <b style="font-size:14px; color:tomato"> Jabalpur</b>
+        </b><br>
+        <i style="font-size:medium;">Aug'24 - Jul'26(Graduating)</i><br>
+        <p style="font-family:Calibri;">M.Des in Interaction and Service Design<br>
+        <b>Thesis:</b> Redesign of waiting spaces in psychiatric healthcare environments <br>
+        <b>Coursework:</b> Interaction Design, Service Design, UX Research, Human Factors
+        </p>
+    </p>
+    <hr>
+    <p style="color:lightseagreen; font-family:Calibri;">
+        <b>Experience</b>
+    </p>
+    <p style="font-size:24px; color:rgb(40, 40, 40); font-family:Calibri;">
+        <b>LnT Construction 
+            <b style="font-size:14px; color:tomato"> Chennai HQ</b>
+        </b><br>
+        <i style="font-size:medium;">May'25 - Aug'25</i><br>
+        <ul style="font-family:Calibri;">
+            <li>Designed and implemented lean UX flows for internal platforms across 3+ departments</li>
+            <li>Reduced interaction complexity by up to 45% through UI restructuring and clickstream simplification</li>
+            <li>Integrated design systems and developed low-fidelity wireframes to hand-off-ready prototypes</li>
+            <li>Actively learning HTML, CSS, JS to bridge design-engineering gap</li> </ul>
+    </p>
+    <p style="font-size:24px; color:rgb(40, 40, 40); font-family:Calibri;">
+        <b>SpodaAI 
+            <b style="font-size:14px; color:tomato"> Remote</b>
+        </b><br>
+        <i style="font-size:medium;">Sept'24 - Mar'25</i><br>
+        <ul style="font-family:Calibri;">
+            <li>Suggested improvements to improve onboarding and retention</li>
+            <li>Conducted end-to-end user research for a B2C feature rollout (50+ user interviews)</li>            <li>Performed targeted research by creating cohorts and carrying out usability testing</li>
+        </ul>
+    </p>
+    <p style="font-size:24px; color:rgb(40, 40, 40); font-family:Calibri;">
+        <b>Changejar Technologies 
+            <b style="font-size:14px; color:tomato"> Bengaluru</b>
+        </b><br>
+        <i style="font-size:medium;">Jan'23 - June'23</i><br>
+        <ul style="font-family:Calibri;">
+            <li>Extracted insights for onboarding and lending funnels to improve conversion rates</li>
+            <li>Worked on onboarding journeys and modular UI patterns</li>
+            <li>Organized and led an in-person User Research Day by inviting active app users to HQ; facilitated direct interaction between users and cross-functional teams to build trust, extract experiential insights, and surface critical feedback across product, design, and engineering</li>
+        </ul>
+    </p>
+    <hr>
+    <p style="color:lightseagreen; font-family:Calibri">
+        <b>Across the Internet</b></br>
+    </p>
+    <p>
+        <ul style="font-family:Calibri;">
+            <li>
+                <b style="font-size:medium">
+                    <a href="https://www.linkedin.com/in/r-raghav-joshi/" title="Go to Raghav's Profile" style="text-decoration:none"><i class="fa-brands fa-linkedin"></i>   LinkedIn</a>
+                </b>
+            </li>
+            <li>
+                <b style="font-size:medium">
+                    <a href="https://www.behance.net/raghavjoshi5" title="Go to Raghav's Behance" style="text-decoration:none"><i class="fa-brands fa-square-behance"></i>   Behance</a>
+                </b>
+            </li>
+        </ul>
+    </p>
+</td>
+</tr>
+</table>
+</div>
+</body>
+</html>
