--- a/Frontend Projects/1. Single Page CV/code.html
+++ b/Frontend Projects/1. Single Page CV/code.html
@@ -73,7 +73,8 @@
         <i style="font-size:medium;">Sept'24 - Mar'25</i><br>
         <ul style="font-family:Calibri;">
             <li>Suggested improvements to improve onboarding and retention</li>
-            <li>Conducted end-to-end user research for a B2C feature rollout (50+ user interviews)</li>            <li>Performed targeted research by creating cohorts and carrying out usability testing</li>
+            <li>Conducted end-to-end user research for a B2C feature rollout (50+ user interviews)</li>            
+            <li>Performed targeted research by creating cohorts and carrying out usability testing</li>
         </ul>
     </p>
     <p style="font-size:24px; color:rgb(40, 40, 40); font-family:Calibri;">
