--- a/Frontend Projects/1. Single Page CV/revised+formatted.html
+++ b/Frontend Projects/1. Single Page CV/revised+formatted.html
@@ -31,8 +31,8 @@
     <div class="page">
       <hr width="320" align="left" />
       <p style="font-size: 28px; font-family: Verdana">
-        Rakshith Raghav Joshi
-        <b style="color: lightseagreen; font-family: Calibri"
+        Rakshith Raghav Joshi <br />
+        <b style="font-size: 20px; color: lightseagreen; font-family: Calibri"
           >Interaction Designer, UX Researcher</b
         >
       </p>
@@ -166,4 +166,3 @@
     </div>
   </body>
 </html>
-
