--- a/Frontend Projects/1. Single Page CV/revised+formatted.html
+++ b/Frontend Projects/1. Single Page CV/revised+formatted.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Curriculum-Vitae</title>
+    <title>Rakshith Raghav Joshi - CV</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Rakshith Raghav Joshi - MDes IIIT JBP CV"
+    />
+    <meta name="author" content="Rakshith Raghav Joshi" />
+    <meta
+      name="keywords"
+      content="Rakshith, Raghav, Joshi, IIIT, MDes, UX, UI, Interaction, Design"
+    />
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
     <script
       src="https://kit.fontawesome.com/e55ca06509.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
-    <meta charset="UTF-8" />
-    <meta
-      name="description"
-      content="Rakshith Raghav Joshi - CV/Resume; MDes IIIT JBP - Interaction and Service Design"
-    />
-    <meta
-      name="keywords"
-      content="Rakshith, Raghav, Joshi, IIIT, MDes, Interaction Design, IxD, Service Design, UI/UX, UI, UX, Research"
-    />
-    <meta name="author" content="Raghav Joshi" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
       div.page {
         max-width: 650px;
@@ -30,7 +29,7 @@
   <body>
     <div class="page">
       <hr width="320" align="left" />
-      <p style="font-size: 28px; font-family: Verdana">
+      <p style="font-size: 30px; font-family: Verdana; font-weight: light">
         Rakshith Raghav Joshi <br />
         <b style="font-size: 20px; color: lightseagreen; font-family: Calibri"
           >Interaction Designer, UX Researcher</b
@@ -52,31 +51,35 @@
       </p>
       <hr />
       <p style="color: lightseagreen; font-family: Calibri">
-        <b>Education</b>
+        <strong>Education</strong>
       </p>
       <p style="font-size: 24px; color: rgb(40, 40, 40); font-family: Calibri">
-        <b
-          >Indian Insititute of Information Technology
-          <b style="font-size: 14px; color: tomato"> Jabalpur</b> </b
+        <strong
+          >Indian Institute of Information Technology
+          <strong style="font-size: 14px; color: tomato">
+            Jabalpur</strong
+          > </strong
         ><br />
         <i style="font-size: medium">Aug'24 - Jul'26(Graduating)</i><br />
       </p>
 
       <p style="font-family: Calibri">
         M.Des in Interaction and Service Design<br />
-        <b>Thesis:</b> Redesign of waiting spaces in psychiatric healthcare
-        environments <br />
-        <b>Coursework:</b> Interaction Design, Service Design, UX Research,
-        Human Factors
+        <strong>Thesis:</strong> Redesign of waiting spaces in psychiatric
+        healthcare environments <br />
+        <strong>Coursework:</strong> Interaction Design, Service Design, UX
+        Research, Human Factors
       </p>
       <hr />
       <p style="color: lightseagreen; font-family: Calibri">
-        <b>Experience</b>
+        <strong>Experience</strong>
       </p>
       <p style="font-size: 24px; color: rgb(40, 40, 40); font-family: Calibri">
-        <b
+        <strong
           >LnT Construction
-          <b style="font-size: 14px; color: tomato"> Chennai HQ</b> </b
+          <strong style="font-size: 14px; color: tomato">
+            Chennai HQ</strong
+          > </strong
         ><br />
         <i style="font-size: medium">May'25 - Aug'25</i><br />
       </p>
@@ -99,7 +102,11 @@
         </li>
       </ul>
       <p style="font-size: 24px; color: rgb(40, 40, 40); font-family: Calibri">
-        <b>SpodaAI <b style="font-size: 14px; color: tomato"> Remote</b> </b
+        <strong
+          >SpodaAI
+          <strong style="font-size: 14px; color: tomato">
+            Remote</strong
+          > </strong
         ><br />
         <i style="font-size: medium">Sept'24 - Mar'25</i><br />
       </p>
@@ -116,9 +123,11 @@
         </li>
       </ul>
       <p style="font-size: 24px; color: rgb(40, 40, 40); font-family: Calibri">
-        <b
+        <strong
           >Changejar Technologies
-          <b style="font-size: 14px; color: tomato"> Bengaluru</b> </b
+          <strong style="font-size: 14px; color: tomato">
+            Bengaluru</strong
+          > </strong
         ><br />
         <i style="font-size: medium">Jan'23 - June'23</i><br />
       </p>
@@ -138,29 +147,29 @@
       </ul>
       <hr />
       <p style="color: lightseagreen; font-family: Calibri">
-        <b>Across the Internet</b>
+        <strong>Across the Internet</strong>
       </p>
       <p></p>
       <ul style="font-family: Calibri">
         <li>
-          <b style="font-size: medium">
+          <strong style="font-size: medium">
             <a
               href="https://www.linkedin.com/in/r-raghav-joshi/"
               title="Go to Raghav's Profile"
               style="text-decoration: none"
               ><i class="fa-brands fa-linkedin"></i> LinkedIn</a
             >
-          </b>
+          </strong>
         </li>
         <li>
-          <b style="font-size: medium">
+          <strong style="font-size: medium">
             <a
               href="https://www.behance.net/raghavjoshi5"
               title="Go to Raghav's Behance"
-              style="text-decoration: none"
+              style="text-decoration: none; color: #123456"
               ><i class="fa-brands fa-square-behance"></i> Behance</a
             >
-          </b>
+          </strong>
         </li>
       </ul>
     </div>
