--- a/Frontend Projects/2. Website_Basic/2. website.html
+++ b/Frontend Projects/2. Website_Basic/2. website.html
@@ -3,7 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HTML_Web Portfolio</title>
+    <meta
+      name="description"
+      content="Portfolio landing page of Rakshith Raghav Joshi, showcasing skills in interaction and service design, user research, and product thinking."
+    />
+    <meta name="author" content="Rakshith Raghav Joshi" />
+    <meta
+      name="keywords"
+      content="Rakshith Joshi, Interaction Design, Service Design, UX Research, Product Design, IIITDM Jabalpur, Design Portfolio"
+    />
+    <title>Rakshith Raghav Joshi | Interaction Designer</title>
     <style>
       div.page {
         max-width: 900px;
