--- a/Frontend Projects/2. Website_Basic/2. p_resume.html
+++ b/Frontend Projects/2. Website_Basic/2. p_resume.html
@@ -3,7 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HTML_Web Portfolio</title>
+    <meta
+      name="description"
+      content="Detailed resume of Rakshith Raghav Joshi including education, internships, skills, and thesis in interaction and service design."
+    />
+    <meta name="author" content="Rakshith Raghav Joshi" />
+    <meta
+      name="keywords"
+      content="Design Resume, UX Designer, Interaction Design, Architecture to Design, IIITDM Resume, Rakshith Joshi CV"
+    />
+    <title>Resume | Rakshith Raghav Joshi</title>
     <script
       src="https://kit.fontawesome.com/e55ca06509.js"
       crossorigin="anonymous"
