--- a/Frontend Projects/2. Website_Basic/2. p_projects.html
+++ b/Frontend Projects/2. Website_Basic/2. p_projects.html
@@ -3,7 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HTML_Web Portfolio</title>
+    <meta
+      name="description"
+      content="Sample projects by Rakshith Raghav Joshi demonstrating user interface design, UX research, and service design thinking."
+    />
+    <meta name="author" content="Rakshith Raghav Joshi" />
+    <meta
+      name="keywords"
+      content="UX Projects, UI Design, Product Design Samples, Service Design, User Research, Design Thinking"
+    />
+    <title>Projects | Rakshith Raghav Joshi</title>
     <style>
       div.page {
         max-width: 900px;
