--- a/Frontend Projects/2. Website_Basic/2. p_contact.html
+++ b/Frontend Projects/2. Website_Basic/2. p_contact.html
@@ -3,7 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HTML_Web Portfolio</title>
+    <meta
+      name="description"
+      content="Get in touch with Rakshith Raghav Joshi through this contact form. Open to collaborations, freelance, and opportunities in UX and product design."
+    />
+    <meta name="author" content="Rakshith Raghav Joshi" />
+    <meta
+      name="keywords"
+      content="Contact Rakshith Joshi, UX Designer Email, Design Collaboration, Freelance Designer, Interaction Design Contact"
+    />
+    <title>Contact | Rakshith Raghav Joshi</title>
     <style>
       div.page {
         max-width: 900px;
