--- a/Frontend Projects/3. Responsive+CSS/3. responsive.html
+++ b/Frontend Projects/3. Responsive+CSS/3. responsive.html
@@ -11,7 +11,7 @@
     ></script>
   </head>
   <body>
-    <div><img class="hero" src="/HTML/Roadmap/images/head.jpg" /></div>
+    <div><img class="hero" src="images/head.jpg" /></div>
     <div class="header">
       <div class="left">
         <img class="pagelogo" src="images/profile.png" alt="RJ logo" />
